--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       sizes="16x16"
       href="%PUBLIC_URL%/favicon-16x16.png"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest.json" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <title>COVID-19 Tracker</title>
   </head>
