--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest.json" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <script
+      src="https://kit.fontawesome.com/e995896258.js"
+      crossorigin="anonymous"
+    ></script>
     <title>COVID-19 Tracker</title>
   </head>
   <body class="sans">
